@@ -1,23 +1,21 @@
 package no.entur.uttu.config;
 
-import static org.springframework.security.config.Customizer.withDefaults;
-
 import java.util.Arrays;
-import java.util.List;
 import org.entur.oauth2.JwtRoleAssignmentExtractor;
 import org.rutebanken.helper.organisation.RoleAssignmentExtractor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
 @Profile("local")
-public class LocalSecurityConfiguration extends WebSecurityConfigurerAdapter {
+public class LocalSecurityConfiguration {
 
   @Bean
   public RoleAssignmentExtractor roleAssignmentExtractor() {
@@ -25,24 +23,22 @@ public class LocalSecurityConfiguration extends WebSecurityConfigurerAdapter {
   }
 
   @Bean
+  public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    return http
+      .csrf(AbstractHttpConfigurer::disable)
+      .authorizeHttpRequests(auth -> auth.anyRequest().permitAll())
+      .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+      .build();
+  }
+
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedHeaders(List.of("*"));
-    configuration.addAllowedOrigin("*");
-    configuration.setAllowedMethods(List.of("GET", "PUT", "POST", "DELETE"));
+    configuration.addAllowedOriginPattern("*");
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST"));
+    configuration.setAllowedHeaders(Arrays.asList("*"));
+    configuration.setExposedHeaders(Arrays.asList("*"));
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
     return source;
-  }
-
-  @Override
-  public void configure(HttpSecurity http) throws Exception {
-    http
-      .cors(withDefaults())
-      .csrf()
-      .disable()
-      .authorizeRequests()
-      .anyRequest()
-      .permitAll();
   }
 }
